syntax = "proto3";
package core.protos;

import "core/protos/shared.proto";

message FederatedModel {
    repeated FederatedVariableDef federated_variables = 1; // List of federated variables.
}

message FederatedVariableDef {
    string name = 1; // The name assigned to the federated variable.
    bool trainable = 2; // Whether this variable is trainable or not.
    DoubleVariable double_variable = 3; // The structure of the variable.
}